--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
     </div> 
     <div class="form-group">
         <label for='password'>Password:</label>
-        <input type='text' name='password' id='password' placeholder="Password"/>
+        <input type='password' name='password' id='password' placeholder="Password"/>
     </div> 
         <button class="btn btn-primary" type='submit'>Login</button>
 </div></center>
