--- a/templates/order.html
+++ b/templates/order.html
@@ -6,5 +6,6 @@
 {% endblock %}
 
 {% block body %}
-
+<p>You have successfully checked out!</p>
+<button onclick="window.location.href = '/'">Home</button>
 {% endblock %}
