--- a/templates/account.html
+++ b/templates/account.html
@@ -6,10 +6,13 @@
 {% endblock %}
 
 {% block body %}
-
+<center>
+<h2>Account Information</h2>
 <p>Username: {{user['Username']}}</p>
 <p>Display Name: {{user['Display Name']}}</p>
-<p>Listed Products: {{user['Listings']|length}}</p>
+</center>
+<br> <br>
+<center><h2> Your Past/Current Listed Items: {{user['Listings']|length}}</h2></center>
 
 {% for item in user['Listings'] %}
 <center>
@@ -17,12 +20,12 @@
         <div class = "card mt-5 border-primary rounded-lg" style="width:800px">
             <div class="row no-gutters">
                 <div class="col-sm-5">
-                    <a href = '{{ url_for('displayItem', _id = item['_id'])}}'>
+                    <!--<a href = '{{ url_for('displayItem', _id = item['_id'])}}'> -->
                     <img src="data:image/jpeg;base64,{{ item['Image'] }}" alt="img_data"  id="imgslot" class ="img-size-list card-img"></a>
                 </div>
                 <div class="col-sm-7">
                     <div class = "card-body">
-                        &emsp;<a href = '{{ url_for('displayItem', _id = item['_id'])}}'><div class = "list-name list-margin product-name">{{item['Name']}}</div></a>
+                        &emsp;<div class = "list-name list-margin product-name">{{item['Name']}}</div></a>
                         &emsp;&emsp;&emsp;&emsp; <div class = "list-margin">Price: ${{item['Price']}}</div>
                         &emsp; <div class = "list-margin">Description: {{item['Description']}}</div>
                         &emsp;<div class = "list-margin">Type of Product: {{item['Type']}}</div>
@@ -33,5 +36,7 @@
     </div>
 </center>
 {%endfor%}
-<button onclick="window.location.href = '/'">Home</button>
+<br> <br>
+<center><button onclick="window.location.href = '/'" class = "btn btn-primary">Home</button></center>
+<br> <br>
 {% endblock %}
