--- a/templates/create.html
+++ b/templates/create.html
@@ -6,11 +6,22 @@
 {% endblock %}
 
 {% block body %}
-<h3>Create your Account</h3>
+
 <form action='/create' method='POST' enctype="multipart/form-data">
+    <center><div class="container-md">
+        <br> <br>
+        <h3>Create your Account</h3>
+        <br> <br>
+        <div class = "form-group">
 <input type='text' name='username' placeholder="Username"/> <br> <br>
+</div>
+<div class = "form-group">
 <input type='text' name='password' placeholder="Password"/> <br> <br>
+</div>
+<div class = "form-group">
 <input type='text' name='displayName' placeholder="Display Name"/> <br> <br>
-<button type='submit'>Create</button>
+</div>
+<button type='submit' class = "btn btn-primary">Create</button>
+</div></center>
 </form>
 {% endblock %}
