--- a/templates/sellerTab.html
+++ b/templates/sellerTab.html
@@ -5,8 +5,8 @@
 {%endblock%}
 
 {%block body%}
-<div class = "list-margin">
-<h1>Post Goods Here</h1>
+<br> <br>
+<center><div class = "list-margin">
 <p>Click on the <span class = "font-weight-bold">dropdown menu</span> below to pick what kind of product you will be putting up for sale.</p>
 </div>
 <!--<input type = "text" id = "choice" placeholder="Search Your Products"
@@ -24,5 +24,5 @@ onkeydown="display(event)"> -->
 <button type="submit">Post item to the Marketplace</button>
 </form>
 <br>
-&emsp;<a href="/"><input type="button" value="Return to Marketplace"></a>
+&emsp;<a href="/"><input type="button" value="Return to Marketplace"></a></center>
 {%endblock%}
