--- a/templates/postItem.html
+++ b/templates/postItem.html
@@ -30,7 +30,7 @@
 &emsp;<span class="col-sm-2 col-form-label">Enter Product Name: </span><input type="text" id="name" name="name">
 </div>
 <div class="form-group row">
-&emsp;<span class="col-sm-2 col-form-label">Enter Product Description: </span><br>&emsp;<textarea class="form-control-sm" rows="3" id="desc" name="desc"></textarea>
+&emsp;<span class="col-sm-2 col-form-label">Enter Product Description: </span><br>&emsp;<textarea class="form-control-md" rows="7" id="desc" name="desc"></textarea>
 </div>
 <div class="form-group row">
 &emsp;<span class="col-sm-2 col-form-label">Enter Product Price: $</span><input type="text" id="price" name="price">
@@ -114,7 +114,7 @@
 </div>
 <br>
 <br>
-&emsp;<a href="/sell"><input type="button" value="Return to Seller Tab" class = "btn btn-secondary"></a>
+<center><a href="/sell"><input type="button" value="Return to Seller Tab" class = "btn btn-secondary"></a></center>
 <br><br>
 
 {%endblock%}
