--- a/templates/cart.html
+++ b/templates/cart.html
@@ -6,32 +6,39 @@
 {% endblock %}
 
 {% block body %}
-<center><h3>Your Cart</h3></center>
+<div class="container p-3">
+<center>
+    <div class="card">
+    <h2>Shopping Cart</h2>
+    </div>
+</center>
+</div>
 {%for item in cart%}
-<div class="container">
-    <div class = "card d-flex flex-column mt-5 border-danger rounded-lg">
+<center><div class="container m-3">
+    <div class = "card p-5 mt-5 border-danger rounded-lg" style="width:1100px">
         <div class="row no-gutters">
-        
             <div class="col-sm-5">
-    <p><img src="data:image/jpeg;base64,{{ item['Image'] }}" alt="img_data"  id="imgslot" class = "image-size-view image"></p>
-        </div>
-    <div class="card-body">
-        <div class="col-sm-7">  
-            <br><br> <br> 
-    <p>{{item['Name']}}</p>
-    <p>Price: ${{item['Price']}}</p>
-    <p>{{item['Description']}}</p>
-
-    <form action='/cart', method = 'POST'>
-        <input type = 'hidden' name = "itemID" value ="{{item['_id']}}" />
-        <button type='submit' class = "btn btn-danger right">Remove</button>
-    </form>
+                <img src="data:image/jpeg;base64,{{ item['Image'] }}" alt="img_data"  id="imgslot" class = "img-size-list card-img">
+            </div>
+            <div class="col-sm-7">
+                <div class="card-body">  
+                    <h3>{{item['Name']}}</h3>
+                    <br>
+                    Price: ${{item['Price']}}
+                    <br> <br>
+                    {{item['Description']}}
+                </div>
+                <form action='/cart', method = 'POST'>
+                <div class="clearfix mr-3">
+                    <input type = 'hidden' name = "itemID" value ="{{item['_id']}}" />
+                    <span class="float-right"><button type='submit' class = "btn btn-danger right">Remove</button></span>
+                </div>
+                </form>
+            </div>
     <br>
 </div>
 </div>
-</div>
-</div>
-</div>    
+</div></center>  
 {%endfor%}
 {%if cart|length > 0%}
 <br> <br>
