--- a/templates/itemView.html
+++ b/templates/itemView.html
@@ -9,16 +9,14 @@
     <div class = "card p-5 mt-3 border-danger rounded-lg" style="width:1000px">
         <div class="row no-gutters">
             <div class="col-sm-5">
-                <a href = '{{ url_for('displayItem', _id = item['_id'])}}'>
-                <img src="data:image/jpeg;base64,{{ item['Image'] }}" alt="img_data"  id="imgslot" class ="img-size-list card-img"></a>
+                <img src="data:image/jpeg;base64,{{ item['Image'] }}" alt="img_data"  id="imgslot" class ="img-size-list card-img">
             </div>
             <div class="col-sm-7">
                 <div class = "card-body">
                     <h1 class="mt-0">{{item['Name']}}</h1>
-        
-                            <p>Price: ${{item['Price']}}
-                            &emsp;&emsp;&emsp;&emsp;&emsp;
-                            {{item['Description']}}</p>
+                            <br>
+                            <p>Price: ${{item['Price']}}</p>
+                            <p>{{item['Description']}}</p>
 
 
                             {% for detail in item['Product Details'] %}
@@ -34,6 +32,12 @@
                             {%endfor%}
                             <p>Seller: {{item['Seller']}}</p>
                         </div>
+                        <form action = '{{ url_for('displayItem', _id = item['_id'])}}' method="POST">
+                            <div class="clearfix mr-3">
+                            <input type = 'hidden' name = "objectID" value ='{{item['_id']}}' />
+                            <span class="float-right"><button type = 'submit' class='btn btn-success'>Add To Cart</button></span>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -42,8 +46,4 @@
 </div>
 
 <br>
-<form action = '{{ url_for('displayItem', _id = item['_id'])}}' method="POST">
-    <input type = 'hidden' name = "objectID" value ='{{item['_id']}}' />
-    &emsp;<button type = 'submit'>Add To Cart</button>
-</form>
 {%endblock%}
