--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
           background-attachment: fixed;
         }
         .navbar-color {
-            background-color: rgb(129, 28, 28);
+            background-color: rgb(170, 36, 36);
         }
         .navbar-nav > li{
             padding-left:30px;
@@ -89,21 +89,21 @@
         <div class="collapse navbar-collapse" id="navbarNav">  
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/buy">Buy</a>
+                    <a class="nav-link" href="/buy"><strong>Buy</strong></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sell">Sell</a>
+                    <a class="nav-link" href="/sell"><strong>Sell</strong></a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/account">Account</a>
+                    <a class="nav-link" href="/account"><strong>Account</strong></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/cart">Cart</a>
+                    <a class="nav-link" href="/cart"><strong>Cart</strong></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/logout">Logout</a>
+                    <a class="nav-link" href="/logout"><strong>Logout</strong></a>
                 </li>
                 
                 <!--<div class="dropdown">
