--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -7,6 +7,18 @@
 {%block body%}
 <h1 class = "indent">Confirmation</h1>
 
+{% if typ == 'order' %}
+<div class="alert alert-success">
+    <strong>Order Successfully Placed!</strong> Thank you for your time.
+</div>
+{%endif%}
+
+{% if typ == 'sell' %}
+<div class="alert alert-success">
+    <strong>Item Successfully Posted to Marketplace!</strong> Thank you for your time.
+</div>
+{%endif%}
+
 <div class="jumbotron">
 <p class = "list-margin">&emsp;Confirmation Message: {{conf}}</p>
 <br><br>
