--- a/templates/create.html
+++ b/templates/create.html
@@ -7,6 +7,12 @@
 
 {% block body %}
 
+{% if err == True %}
+<div class="alert alert-danger">
+    <strong>Error!</strong> Please enter at least a username and password.
+</div>
+{%endif%}
+
 <form action='/create' method='POST' enctype="multipart/form-data">
     <center><div class="container-md">
         <br> <br>
@@ -16,7 +22,7 @@
 <input type='text' name='username' placeholder="Username"/> <br> <br>
 </div>
 <div class = "form-group">
-<input type='text' name='password' placeholder="Password"/> <br> <br>
+<input type='password' name='password' placeholder="Password"/> <br> <br>
 </div>
 <div class = "form-group">
 <input type='text' name='displayName' placeholder="Display Name"/> <br> <br>
