--- a/templates/itemView.html
+++ b/templates/itemView.html
@@ -35,7 +35,9 @@
                         <form action = '{{ url_for('displayItem', _id = item['_id'])}}' method="POST">
                             <div class="clearfix mr-3">
                             <input type = 'hidden' name = "objectID" value ='{{item['_id']}}' />
+                            {% if item['Seller'] != user %}
                             <span class="float-right"><button type = 'submit' class='btn btn-success'>Add To Cart</button></span>
+                            {%endif%}
                             </div>
                         </form>
                     </div>
