final ui changes

--- a/templates/account.html
+++ b/templates/account.html
@@ -72,6 +72,6 @@
 </center>
 {%endfor%}
 <br> <br>
-<center><button onclick="window.location.href = '/'" class = "btn btn-primary">Home</button></center>
+<center><button onclick="window.location.href = '/'" class = "btn btn-secondary">Return to Marketplace</button></center>
 <br> <br>
 {% endblock %}
