--- a/templates/cart.html
+++ b/templates/cart.html
@@ -57,4 +57,6 @@
 <br> <br>
 </center>
 {%endif%}
+<center><button onclick="window.location.href = '/'" class = "btn btn-secondary">Return to Marketplace</button></center>
+<br> <br>
 {% endblock %}
