--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
     and campus life.
   </p>
   <br>
+  <div class='jumbotron'>
   <p><strong>Marketplace Instructions:</strong></p>
   <p>We provide services to Buy and Sell</p>
   <ul>
@@ -25,6 +26,7 @@
       <li>Books</li>
       <li>Sports Gear</li>
   </ul>
+  </div>
   <p>
       If you are just browsing, have fun! You must have an account
       with us if you want to buy or sell products for quality assurance
